# SCIMInspector

./: .gitignore  CONTRIBUTING.md  README.md  angular.json  package-lock.json  package.json
.github/workflows/: ci.yml  release.yml
docs/: README.md  features.md  getting-started.md  scim-reference.md
src/: index.html  styles.scss
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  db.rs  export.rs  lib.rs  load_test.rs  main.rs  models.rs  scim_client.rs  validation.rs
src/app/: app.config.ts  app.html  app.routes.ts  app.scss  app.spec.ts  app.ts
src/app/models/: interfaces.ts
src/app/pages/dashboard/: dashboard.component.html  dashboard.component.scss  dashboard.component.ts
src/app/pages/explorer/: explorer.component.html  explorer.component.scss  explorer.component.ts
src/app/pages/field-mapping/: field-mapping.component.html  field-mapping.component.scss  field-mapping.component.ts
src/app/pages/load-test/: load-test.component.html  load-test.component.scss  load-test.component.ts
src/app/pages/reports/: reports.component.html  reports.component.scss  reports.component.ts
src/app/pages/sample-data/: sample-data.component.html  sample-data.component.scss  sample-data.component.ts
src/app/pages/server-config/: server-config.component.html  server-config.component.scss  server-config.component.ts
src/app/services/: notification.service.ts  scim-schema.service.ts  server-config.service.ts  tauri.service.ts  theme.service.ts
(+6 files in other folders)
