[package]
name = "scim-inspector"
version = "0.2.0"
description = "SCIM 2.0 Server Validator and Load Tester"
authors = ["SCIM Inspector"]
edition = "2021"

[lib]
name = "scim_inspector_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[[bin]]
name = "scim-inspector"
path = "src/main.rs"

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
rusqlite = { version = "0.31", features = ["bundled"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
base64 = "0.22"
rand = "0.8"
thiserror = "1"
csv = "1.3"
regex-lite = "0.1"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
